Fixed a few alignment and scalling issues

--- a/packages/obonode/obojobo-chunks-iframe/viewer-component.scss
+++ b/packages/obonode/obojobo-chunks-iframe/viewer-component.scss
@@ -242,5 +242,12 @@
 				}
 			}
 		}
+
+		&.is-sizing-text-width {
+			> .container {
+				margin: 0 auto;
+				max-width: 87%;
+			}
+		}
 	}
 }
